# serializer version: 1
# name: test_get
  dict({
    'created_at': datetime,
    'description': '',
    'id': 1,
    'latest_release': dict({
      'created_at': datetime,
      'github_url': 'http://www.moreno-wilson.info/',
      'id': 2,
      'name': 'IaJUTVHuIhJxeMChNzFJ',
      'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
      'ready': False,
      'size': 2168,
    }),
    'name': 'ml-plant-viruses',
    'release_count': 3,
    'releases': list([
      dict({
        'created_at': datetime,
        'github_url': 'http://www.moreno-wilson.info/',
        'id': 2,
        'name': 'IaJUTVHuIhJxeMChNzFJ',
        'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
        'ready': False,
        'size': 2168,
      }),
      dict({
        'created_at': datetime,
        'github_url': 'http://www.harris.net/',
        'id': 3,
        'name': 'qtDSSXFzHxwTjtphorte',
        'published_at': datetime.datetime(2004, 8, 24, 15, 12, 26, 746511),
        'ready': False,
        'size': 675,
      }),
      dict({
        'created_at': datetime,
        'github_url': 'https://carlson.com/',
        'id': 1,
        'name': 'DpjjFIyeNTWRUWCuKoQS',
        'published_at': datetime.datetime(2002, 12, 6, 19, 34, 22, 288881),
        'ready': False,
        'size': 6871,
      }),
    ]),
  })
# ---
# name: test_list[False]
  dict({
    'items': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'description': '',
        'id': 2,
        'latest_release': dict({
          'created_at': 'approximately_now_datetime',
          'github_url': 'http://ellis-garcia.com/',
          'id': 5,
          'name': 'bFgqKHkOOfdKFWHYLpSX',
          'published_at': datetime.datetime(2014, 8, 18, 23, 10, 4, 38965),
          'ready': False,
          'size': 1991,
        }),
        'name': 'ml-insect-viruses',
        'release_count': 3,
      }),
      dict({
        'created_at': 'approximately_now_datetime',
        'description': '',
        'id': 1,
        'latest_release': dict({
          'created_at': 'approximately_now_datetime',
          'github_url': 'http://www.moreno-wilson.info/',
          'id': 2,
          'name': 'IaJUTVHuIhJxeMChNzFJ',
          'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
          'ready': False,
          'size': 2168,
        }),
        'name': 'ml-plant-viruses',
        'release_count': 3,
      }),
    ]),
    'last_synced_at': None,
  })
# ---
# name: test_list[True]
  dict({
    'items': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'description': '',
        'id': 2,
        'latest_release': dict({
          'created_at': 'approximately_now_datetime',
          'github_url': 'http://ellis-garcia.com/',
          'id': 5,
          'name': 'bFgqKHkOOfdKFWHYLpSX',
          'published_at': datetime.datetime(2014, 8, 18, 23, 10, 4, 38965),
          'ready': False,
          'size': 1991,
        }),
        'name': 'ml-insect-viruses',
        'release_count': 3,
      }),
      dict({
        'created_at': 'approximately_now_datetime',
        'description': '',
        'id': 1,
        'latest_release': dict({
          'created_at': 'approximately_now_datetime',
          'github_url': 'http://www.moreno-wilson.info/',
          'id': 2,
          'name': 'IaJUTVHuIhJxeMChNzFJ',
          'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
          'ready': False,
          'size': 2168,
        }),
        'name': 'ml-plant-viruses',
        'release_count': 3,
      }),
    ]),
    'last_synced_at': datetime.datetime(2015, 10, 6, 20, 0),
  })
# ---
# name: test_load[first]
  dict({
    'items': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'description': '',
        'id': 1,
        'latest_release': dict({
          'created_at': 'approximately_now_datetime',
          'github_url': 'http://www.moreno-wilson.info/',
          'id': 2,
          'name': 'IaJUTVHuIhJxeMChNzFJ',
          'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
          'ready': False,
          'size': 2168,
        }),
        'name': 'ml-plant-viruses',
        'release_count': 3,
      }),
    ]),
    'last_synced_at': None,
  })
# ---
# name: test_load[ml-insect-viruses]
  dict({
    'created_at': datetime,
    'description': '',
    'id': 2,
    'latest_release': dict({
      'created_at': datetime,
      'github_url': 'http://www.rodriguez-cooper.com/',
      'id': 9,
      'name': 'gYsypWXHjZfEiUXPqmNp',
      'published_at': datetime.datetime(2007, 1, 11, 13, 6, 23, 686969),
      'ready': False,
      'size': 2166,
    }),
    'name': 'ml-insect-viruses',
    'release_count': 1,
    'releases': list([
      dict({
        'created_at': datetime,
        'github_url': 'http://www.rodriguez-cooper.com/',
        'id': 9,
        'name': 'gYsypWXHjZfEiUXPqmNp',
        'published_at': datetime.datetime(2007, 1, 11, 13, 6, 23, 686969),
        'ready': False,
        'size': 2166,
      }),
    ]),
  })
# ---
# name: test_load[ml-plant-viruses]
  dict({
    'created_at': datetime,
    'description': '',
    'id': 1,
    'latest_release': dict({
      'created_at': datetime,
      'github_url': 'http://www.moreno-wilson.info/',
      'id': 2,
      'name': 'IaJUTVHuIhJxeMChNzFJ',
      'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
      'ready': False,
      'size': 2168,
    }),
    'name': 'ml-plant-viruses',
    'release_count': 5,
    'releases': list([
      dict({
        'created_at': datetime,
        'github_url': 'http://www.moreno-wilson.info/',
        'id': 2,
        'name': 'IaJUTVHuIhJxeMChNzFJ',
        'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
        'ready': False,
        'size': 2168,
      }),
      dict({
        'created_at': datetime,
        'github_url': 'http://ellis-garcia.com/',
        'id': 8,
        'name': 'bFgqKHkOOfdKFWHYLpSX',
        'published_at': datetime.datetime(2014, 8, 18, 23, 10, 4, 38965),
        'ready': False,
        'size': 1991,
      }),
      dict({
        'created_at': datetime,
        'github_url': 'http://www.harris.net/',
        'id': 3,
        'name': 'qtDSSXFzHxwTjtphorte',
        'published_at': datetime.datetime(2004, 8, 24, 15, 12, 26, 746511),
        'ready': False,
        'size': 675,
      }),
      dict({
        'created_at': datetime,
        'github_url': 'http://www.sanders-clark.com/',
        'id': 7,
        'name': 'ZPGfxsRfFzDHwBJURZHT',
        'published_at': datetime.datetime(2004, 1, 18, 1, 14, 57, 831020),
        'ready': False,
        'size': 3584,
      }),
      dict({
        'created_at': datetime,
        'github_url': 'https://carlson.com/',
        'id': 1,
        'name': 'DpjjFIyeNTWRUWCuKoQS',
        'published_at': datetime.datetime(2002, 12, 6, 19, 34, 22, 288881),
        'ready': False,
        'size': 6871,
      }),
    ]),
  })
# ---
# name: test_load[second]
  dict({
    'items': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'description': '',
        'id': 2,
        'latest_release': dict({
          'created_at': 'approximately_now_datetime',
          'github_url': 'http://www.rodriguez-cooper.com/',
          'id': 9,
          'name': 'gYsypWXHjZfEiUXPqmNp',
          'published_at': datetime.datetime(2007, 1, 11, 13, 6, 23, 686969),
          'ready': False,
          'size': 2166,
        }),
        'name': 'ml-insect-viruses',
        'release_count': 1,
      }),
      dict({
        'created_at': 'approximately_now_datetime',
        'description': '',
        'id': 1,
        'latest_release': dict({
          'created_at': 'approximately_now_datetime',
          'github_url': 'http://www.moreno-wilson.info/',
          'id': 2,
          'name': 'IaJUTVHuIhJxeMChNzFJ',
          'published_at': datetime.datetime(2022, 11, 14, 6, 1, 1, 47767),
          'ready': False,
          'size': 2168,
        }),
        'name': 'ml-plant-viruses',
        'release_count': 5,
      }),
    ]),
    'last_synced_at': None,
  })
# ---
